WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112175
[GTK] The style of visited links doesn't change in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=112175
Summary
[GTK] The style of visited links doesn't change in WebKit2
Carlos Garcia Campos
Reported
2013-03-12 12:03:46 PDT
This used to work, but it doesn't anymore.
Attachments
Patch
(1.57 KB, patch)
2013-03-12 12:06 PDT
,
Carlos Garcia Campos
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-03-12 12:06:46 PDT
Created
attachment 192783
[details]
Patch
Martin Robinson
Comment 2
2013-03-12 12:43:27 PDT
Comment on
attachment 192783
[details]
Patch Looks good to me.
Carlos Garcia Campos
Comment 3
2013-04-11 23:36:32 PDT
ping owners, this is trivial patch.
Benjamin Poulain
Comment 4
2013-04-11 23:56:45 PDT
Comment on
attachment 192783
[details]
Patch Sure, no problem. No API tests can cover that?
Carlos Garcia Campos
Comment 5
2013-04-12 00:13:08 PDT
(In reply to
comment #4
)
> (From update of
attachment 192783
[details]
) > Sure, no problem.
Thanks for the review.
> No API tests can cover that?
hmm, yes, I guess we could visit a link and check its style. We'll do it in a follow up patch.
Carlos Garcia Campos
Comment 6
2013-04-12 01:11:34 PDT
Committed
r148267
: <
http://trac.webkit.org/changeset/148267
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug