[GTK] The style of visited links doesn't change in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=112175

Reviewed by Martin Robinson.

The problem is that visited links were not tracked by the web
process. There's a web process initial parameter to set whether
web process should track visited links or not and it's disabled by
default.

* UIProcess/gtk/WebContextGtk.cpp:
(WebKit::WebContext::platformInitializeWebProcess): Always set
shouldTrackVisitedLinks to true.